Day 10 (and other quick edits)